namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-integration-api-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-integration-api-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "ask-hmpps-integration-api"
    cloud-platform.justice.gov.uk/application: "HMPPS Integration API"
    cloud-platform.justice.gov.uk/owner: "HMPPS Integration API Team: hmpps-integration-api@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-integration-api"
    cloud-platform.justice.gov.uk/team-name: "hmpps-integration-api"
    cloud-platform.justice.gov.uk/review-after: ""
